--- a/index.html
+++ b/index.html
@@ -148,6 +148,9 @@
 	            $('.blip').click(function() {
 	            	$('.pop').fadeIn( 500 );
 	            });
+	            $('.city-hover').click(function() {
+	            	$('.pop').fadeIn( 500 );
+	            });
 	            $('.pop').click(function() {
 	            	$('.pop').fadeOut( 500 );
             		$('.pop-inner iframe').prop('src', '#');
