--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>ONE ART</title>
+        <title>#OPENYOUREYES - Save the Arts</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     </head>
